# wairz

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.ci  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 123cc2c5463a_add_missing_indexes_attack_surface_.py  1f6c72decc84_widen_analysis_cache_operation_to_512.py  49211e346ae0_add_attack_surface_entries_table.py  54c8864fbe0c_add_enum_check_constraints.py  81f49fd099f5_add_firmware_id_to_findings.py  8da8627326d4_add_missing_indexes_to_foreign_keys_and_.py  a3b4c5d6e7f8_add_firmware_unpack_progress.py  a4b5c6d7e8f9_add_binary_info_to_firmware.py  aeb9bcbc594a_add_pcap_path_to_emulation_sessions.py  b5c6d7e8f9a0_add_system_emulation_columns.py  b7d3f1a2c4e5_add_confidence_to_findings.py  bb4acf97d9dd_backfill_and_enforce_findings_source_.py  c20efe937646_add_device_metadata_jsonb_to_firmware.py  c4d5e6f7a8b9_add_logs_to_emulation_sessions.py  c8a1f4e2d5b6_add_hardware_firmware_blobs.py  ca95e2723392_dedup_firmware_and_add_unique_.py  d9b2e3f5a6c7_add_blob_id_to_sbom_vulnerabilities.py  e0c33cf2204e_add_cra_compliance_tables.py
backend/app/: config.py  database.py  logging_config.py  main.py  mcp_server.py  rate_limit.py
backend/app/ai/: __init__.py  system_prompt.py  tool_registry.py
backend/app/cli/: compare_apk.py  scan.py
backend/app/middleware/: asgi_auth.py  auth.py
backend/app/models/: __init__.py  analysis_cache.py  attack_surface.py  conversation.py  cra_compliance.py  document.py  emulation_preset.py  emulation_session.py  finding.py  firmware.py  fuzzing.py  hardware_firmware.py  project.py  sbom.py  security_review.py  uart_session.py
backend/app/routers/: analysis.py  apk_scan.py  attack_surface.py  comparison.py  compliance.py  component_map.py  cra_compliance.py  deps.py  device.py  documents.py  emulation.py  events.py  export_import.py  files.py  findings.py  firmware.py  fuzzing.py  hardware_firmware.py  health.py  projects.py  sbom.py  security_audit.py  terminal.py  tools.py
backend/app/schemas/: apk_scan.py  attack_surface.py  comparison.py  cra_compliance.py  device.py  document.py  emulation.py  finding.py  firmware.py  hardware_firmware.py  pagination.py  sbom.py
backend/app/services/: _cache.py  abusech_service.py  androguard_service.py  assessment_service.py  attack_surface_service.py  binary_analysis_service.py  bytecode_analysis_service.py  clamav_service.py  comparison_service.py  compliance_service.py  component_map_service.py  cpe_dictionary_service.py  cra_compliance_service.py  cwe_checker_service.py  dependency_track_service.py  device_service.py  document_service.py  emulation_constants.py  emulation_preset_service.py  emulation_service.py  event_service.py  export_service.py  file_service.py  finding_service.py  firmware_metadata_service.py  firmware_paths.py  firmware_service.py  fuzzing_service.py  ghidra_service.py  grype_service.py  hashlookup_service.py  import_service.py  jadx_service.py  kernel_service.py  manifest_checks.py  mobsf_runner.py  mobsfscan_service.py  pcap_analysis_service.py  qiling_service.py  rtos_detection_service.py  (+10 more)
backend/app/templates/: wairz_init_wrapper.sh
backend/app/utils/: credential_patterns.py  docker_client.py  firmware_context.py  getprop.py  hashing.py  (+3 more)
backend/scripts/: backfill_detection.py  lint_async_subprocess.py  sync_kernel_vulns.py
backend/tests/: conftest.py  test_analysis_cache_schema.py  test_android_sbom.py  test_attack_surface.py  test_backfill_detection.py  test_binary_tools.py  test_bytecode_analysis.py  test_cache_module.py  test_compare_apk.py  test_comparison_service.py  test_deps.py  test_diva_manifest_scan.py  test_emulation_auth.py  test_export_service.py  test_extraction_escape_symlinks.py  test_extraction_integrity_integration.py  test_false_positive_rate.py  test_file_service.py  test_finding_service.py  test_firmware_classification.py  test_firmware_context.py  test_firmware_paths.py  test_firmware_service.py  test_fp_rate_computation.py  test_fuzzing_sanitization.py  test_getprop.py  test_hardcoded_ips.py  test_hardware_firmware_classifier_patterns.py  test_hardware_firmware_cve_matcher.py  test_hardware_firmware_graph.py  test_hardware_firmware_hbom.py  test_hardware_firmware_kernel_vulns_index.py  test_hardware_firmware_mcp_tools.py  test_hardware_firmware_parsers.py  test_hardware_firmware_router.py  test_hashing.py  test_insecurebankv2_manifest.py  test_mediatek_lk_parser.py  test_mediatek_subsystem_parsers.py  test_mobsf_baseline_comparison.py  (+23 more)
(+642 files in other folders)
